--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body, a:link, a:visited, a:active{
   position:absolute;
 }
 .blueify{
-  border:10px solid blue;
+  border:10px solid lightblue;
   border-radius:10px;
   position:absolute;
 }
