--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,16 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#000000;
+  background-image:url('img/background.png');
+  background-color:#1ad2d2;
+  background-size: contain;
+  background-repeat:no-repeat;
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .lineUpButton{
   padding:5px 12px;
   float:right;
 }
@@ -31,14 +34,22 @@ body, a:link, a:visited, a:active{
   width:80px;
   height:80px;
   border-radius:50%;
-
 }
 .tayne{
   position:absolute;
-  background-image:url('tayne.gif');
-  background-repeat: no-repeat;
-  width: auto;
-  height: auto;
+  /*background-image:url('tayne.gif');*/
+  /*background-repeat: no-repeat;*/
+  width: 100;
+  height: 100;
   margin: 0;
   padding: 0;
 }
+/*.centered {  
+  position:fixed;
+  z-index: 100;  
+  top:50%;  
+  left:50%;  
+  margin:-100px 0 0 -100px;  
+  width:200px;  
+  height:200px;  
+}*/
