--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,12 @@ body{
   background-image:url('img/background.png');
   background-color:#1ad2d2;
   background-size: contain;
-  background-repeat:no-repeat;
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton, .lineUpButton{
+.title, .addDancerButton, .lineUpButton, .splitGroup{
   padding:5px 12px;
   float:right;
 }
@@ -35,15 +34,15 @@ body, a:link, a:visited, a:active{
   height:80px;
   border-radius:50%;
 }
-.tayne{
+/*.tayne{
   position:absolute;
-  /*background-image:url('tayne.gif');*/
-  /*background-repeat: no-repeat;*/
+  background-image:url('tayne.gif');
+  background-repeat: no-repeat;
   width: 100;
   height: 100;
   margin: 0;
   padding: 0;
-}
+}*/
 /*.centered {  
   position:fixed;
   z-index: 100;  
