--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton, .lineUpButton, .splitGroup{
+.title, .addDancerButton, .lineUpButton, .splitGroup, .concert{
   padding:5px 12px;
   float:right;
 }
@@ -34,15 +34,32 @@ body, a:link, a:visited, a:active{
   height:80px;
   border-radius:50%;
 }
-/*.tayne{
-  position:absolute;
-  background-image:url('tayne.gif');
-  background-repeat: no-repeat;
-  width: 100;
-  height: 100;
-  margin: 0;
-  padding: 0;
-}*/
+.flipped {
+    transform: scale(-1, 1);
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -khtml-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+}
+.tayne{
+  animation-duration: 2s;
+  animation-iteration-count:infinite;
+  animation-name: bounceIn;
+}
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.5);
+    opacity: 1;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.5);
+  }
+}
 /*.centered {  
   position:fixed;
   z-index: 100;  
