--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton, .lineUpButton, .splitGroup, .concert{
+.title, .addDancerButton, .moveAround, .tendancers, .lineUpButton, .splitGroup, .concert{
   padding:5px 12px;
   float:right;
 }
@@ -34,22 +34,21 @@ body, a:link, a:visited, a:active{
   height:80px;
   border-radius:50%;
 }
-.flipped {
-    transform: scale(-1, 1);
-    -moz-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -khtml-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
+.moveItems {
+  animation-duration: 3s;
+  position: relative;
+  animation-iteration-count:infinite;
+  animation-name: moveIt;
 }
 .tayne{
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-iteration-count:infinite;
   animation-name: bounceIn;
 }
+
 @keyframes bounceIn {
   0% {
-    transform: scale(0.5);
+    transform: scale(0.6);
     opacity: 1;
   }
   60% {
@@ -57,8 +56,25 @@ body, a:link, a:visited, a:active{
     opacity: 1;
   }
   100% {
-    transform: scale(0.5);
+    transform: scale(0.6);
   }
+}
+
+@keyframes moveIt {
+  0% {
+    top:500px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
+.concert{
+  background-image:none;
+  background-color:black;
+  margin: 0px;
+  background-size: contain;
+  font-size: 18px;
 }
 /*.centered {  
   position:fixed;
